courbe qui s'affiche

--- a/Client_prog/CaveChart/index.html
+++ b/Client_prog/CaveChart/index.html
@@ -8,7 +8,6 @@
 		<script src="lib/js/d3.v3.min.js" charset="utf-8"></script>
 		
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/main.js"></script>
 		
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -33,7 +32,7 @@
 				<li><a href="#about">About</a></li>
 				<li><a href="#contact">Contact</a></li>
 			  </ul>
-			</div><!--/.nav-collapse -->
+			</div>
 		  </div>
 		</div>
 		
@@ -49,4 +48,5 @@
                 </div>
 		</div>
 	</body>
+    <script src="js/main.js"></script>
 </html>
